# env-to-array

./: Cargo.toml
src/: lib.rs
