[package]
name = "env_to_array"
version = "0.3.1"
edition = "2021"
authors = ["cyphersnake <cyphersnake@pm.me>"]
repository = "https://github.com/cyphersnake/env_to_array"
description = "Auxiliary crate for collecting arrays in different encodings from string constant & environment variables"
keywords = [
    "env",
    "const",
    "encode",
    "decode",
    "array"
]
license = "MIT"

[lib]
proc-macro = true

[features]
default = ["bs58", "bs64", "bs32", "bs85", "hex"]
bs58 = ["dep:bs58"]
bs64 = ["dep:base64"]
hex = ["dep:hex"]
bs32 = ["dep:base32"]
bs85 = ["dep:base85"]

[dependencies]
base32 = { version = "0.4.0", optional = true }
base64 = { version = "0.22", optional = true }
base85 = { version = "2", optional = true }
bs58 = { version = "0.5", optional = true }
hex = { version = "0.4", optional = true }

itertools = "0.12"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
